# fast-api-blogapi

./: pyproject.toml
fastapi_learn/: main.py
